# workshop_estrutura

./: README.md  pyproject.toml
