[tool.poetry]
name = "workshop-estrutura"
version = "0.1.0"
description = "ETL project"
authors = ["Rafael <rafaelrodriguesdsa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
